Fix links, text, downloads etc. to point to new repositories

--- a/site/_posts/blog/2017-01-17-sorting.md
+++ b/site/_posts/blog/2017-01-17-sorting.md
@@ -203,5 +203,5 @@ All the components required to run the sorting benchmark using Spark/Crail are o
 -i /terasort-input-1280g -o /terasort-output-1280g
 ```
 
-Have questions or comments? Feel free to discuss at the dev mailing list at <a href="mailto:dev@crail.incubator.apache.org">dev@crail.incubator.apache.org</a>
+Have questions or comments? Feel free to open an issue <a href="https://github.com/craillabs/crail/issues">here</a>
 <hr/>
