--- a/site/404.md
+++ b/site/404.md
@@ -6,6 +6,6 @@ Sorry! The server can't find that page.
 
 Please consider trying to find what you need from <a href="{{ site.base }}/">the home page</a>.
 
-If you think something might be broken, please notify the developers at the <a href="mailto:dev@crail.incubator.apache.org">dev mailing list</a>. 
+If you think something might be broken, please create a issue <a href="https://github.com/craillabs/craillabs.github.io/issues">here</a>. 
 
 [home]: {{ site.base }}/
