--- a/site/_posts/blog/2019-10-09-ycsb.md
+++ b/site/_posts/blog/2019-10-09-ycsb.md
@@ -90,7 +90,7 @@ crail@clustermaster:~$ mvn -pl com.yahoo.ycsb:crail-binding -am clean package
 
 <div style="text-align: justify"> 
 <p>
-You need to have a Crail deployment up and running to run the YCSB benchmark. Follow the <a href="https://incubator-crail.readthedocs.io/en/latest">Crail documentation</a> if you need help with configuring and deploying Crail. Once Crail is up and accessible, data can be generated and loaded into Crail as follows. 
+You need to have a Crail deployment up and running to run the YCSB benchmark. Follow the <a href="https://crail.readthedocs.io/en/latest">Crail documentation</a> if you need help with configuring and deploying Crail. Once Crail is up and accessible, data can be generated and loaded into Crail as follows. 
 </p> 
 </div>  
 
